syntax = "proto3";

package datastore.pb;

message DataObj {
  string FilePath = 1;
  uint64 Offset = 2;
  uint64 Size = 3;
}

message FileBlock {
  string FilePath = 1;
  uint64 Offset = 2;
}

message ExtendDataObj {
  repeated FileBlock Blocks = 1;
  uint64 Size = 2;
}
